# master-thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: references.bib
docs/assets/logo/: mlcv_logo.eps
docs/report/: main.tex
docs/report/appendix/: 0_appendix.tex  1_appendix_generalization_is_np_hard.tex
docs/report/frontmatter/: 0_header.tex  1_title.tex  2_task.tex  3_declaration.tex  4_abstract.tex  5_acronyms.tex
docs/report/mainmatter/: 1_introduction.tex  2_background.tex  3_methodology.tex  3_related_work.tex  4_experiments.tex  4_implementation.tex  5_conclusion_and_future_work.tex  5_results.tex
docs/report/mainmatter/tables/: europarl_heuristic.tex  europarl_heuristic_runtime.tex  europarl_ilp.tex  europarl_ilp_runtime.tex  mashkaner2.tex  mashkaner2_others.tex
docs/slides/: slides.tex
scripts/alignments/: local_ds.py
scripts/annotation/europarl/: run_europarl.sh  run_heuristics.py  run_ilp.py  run_lang.sh
scripts/annotation/heuristics/: europarl.py
scripts/annotation/masakhaner/: run_lang.sh  run_masakhaner.sh
scripts/annotation/ranges/: europarl.py
scripts/heuristics/: europarl.py
scripts/ranges/: europarl.py
scripts/utils/: count_max_entity_length.py
src/data/: load_europarl_ds.py
src/ilp/: costs.py  multicut.py  ranges.py
src/pipeline/: alignment.py  cand_evaluator.py  cand_extractor.py  data.py  eval.py  ner.py  projection.py  run_pipeline.py  split.py  translation.py
src/pipeline/configs/: default.yaml
src/pipeline/configs/aligner/: awesome_mbert.yaml  simalign_mbert_argmax.yaml  simalign_mbert_iterative.yaml  simalign_mbert_matching.yaml
src/pipeline/configs/experiment/partial/src_ner/: mdeberta3_base_conll2003.yaml  xlmr_large_conll2003.yaml
src/pipeline/configs/experiment/partial/translate/: nllb200_3B.yaml  nllb200_600M.yaml
src/pipeline/configs/experiment/src_ner/: xlmr_large_conll2003.yaml
src/pipeline/configs/experiment/translate/: nllb200_3B.yaml  nllb200_600M.yaml
src/pipeline/configs/pipeline/: heuristics.yaml  translate.yaml
src/pipeline/configs/pipeline/alignments/full/: 3rd_party_aligner.yaml  ranges_ilp.yaml
src/pipeline/configs/pipeline/annotation/full/: heuristics.yaml  model_transfer.yaml
src/pipeline/configs/pipeline/annotation/partial/: alignments.yaml  heuristics.yaml
src/pipeline/configs/pipeline/annotation/partial/ranges/: align_ner_fusion.yaml  align_ner_nmtscore_fusion.yaml  align_ner_per_class_fusion.yaml  align_nmtscore_fusion.yaml  aligned_ngrams.yaml  aligned_subranges.yaml  ner.yaml  ner_nmtscore_fusion.yaml  ngrams.yaml  nmtscore.yaml
src/pipeline/configs/pipeline/full/: heuristics.yaml
src/pipeline/configs/pipeline/partial/: heuristics.yaml  src_ner.yaml  translate.yaml
src/pipeline/configs/pipeline/partial/ranges/: aligned_ngrams.yaml  aligned_subranges.yaml  ngrams.yaml
src/utils/: entities.py  iterators.py  model_context.py  pipeline.py  tokenwise_pipeline.py  transformers.py
